Revision history for Perl extension Socket::More.
v0.5.1  2024-01-20
  [fixes]
    - Address failing tests on FreeBSD.
      - Fix un/pack_sockaddr_un with correct sizing of structure

    - Improved OS specific code

v0.5.0  2024-01-18
  [features]
    - Refactored into multiple sub modules for CPAN
      - Socket::More::Lookup => getaddrinfo/getnameinfo
      - Socket::More::Resolver => Asynchronous event/nonblocking system resolver
      - Socket::More::Constants => supported constants for your system
      - Socket::More::Interface => getifaddrs et al.
      - Socket::More::IPRanges => IPv4 and IPv6 address classifications/grouping 
    - interface information is returned in 'if' element sockaddr_passive
    - Support for Multicast groups in sockaddr_passive
    - Removed runtime dependency on Socket
    - Implemented pack/unpack_sockaddr_un/in/in6 and sockaddr_family
        
    

    [bug fixes]
    - addressed a potential issue where duplicate results could be returned from sockaddr_passive

    [improvements]
      - reduced memory overhead by not requiring Socket at runtime
      - reduced memory overhead by only processing IP ranges/groups when
        asked for in sockaddr_passive specification
      - renamed sock_to_string  as socktype_to string (original aliased)
      - renamed string_to_sock as string_to_socktype (original aliased)
      - renamed 'type' field in passive spec to 'socktype' for better
        consistency. Backward compatible. The old 'type' field is
        depreciated.



v0.4.3 2023-09-05
  [changes]
    - All symbols are exported by default. No longer need the :all tag
    - All symbols from Socket module are exported into callers name unless
      called with use Socket::More ()
  

  [improvements]
    - Refactored to remove dependencies List::Util, Sort::Key::Multi and carp
    - Exporting symbols with Export::These  for easy reexport of  Socket
      symbols
    - Updated CI config
    

v0.4.2 2023-05-27
  [tests]